--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,15 @@ authors = ["Borna <borna.jamali@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+invoke = "^1.7.3"
+nltk = "^3.7"
 
 [tool.poetry.dev-dependencies]
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+coverage = "^6.5.0"
+pylint = "^2.15.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
